--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         
     - name: Restore
-      run: dotnet restore --configuration ${{ env.CONFIGURATION }}
+      run: dotnet restore
 
     - name: Build
       run: dotnet build --configuration ${{ env.CONFIGURATION }}
