--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,7 +58,7 @@ jobs:
 
     - name: Push nuget package
       run: |
-        dotnet nuget push "Arnab.CustomPrompt/bin/Release/Arnab.CustomPrompt.0.0.1.nupkg" \
+        dotnet nuget push "src/Arnab.CustomPrompt/bin/Release/Arnab.CustomPrompt.0.0.1.nupkg" \
           --api-key ${{ secrets.NUGET_API_KEY }} \
           --source https://api.nuget.org/v3/index.json \
           --skip-duplicate
