--- a/Example/Arnab.CustomPrompt.Api/Arnab.CustomPrompt.Api.csproj
+++ b/Example/Arnab.CustomPrompt.Api/Arnab.CustomPrompt.Api.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Arnab.CustomPrompt\Arnab.CustomPrompt.csproj" />
+  </ItemGroup>
+
 </Project>
