--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         
     - name: Restore
-      run: dotnet restore
+      run: dotnet restore --locked-mode
 
     - name: Build
       run: dotnet build --configuration ${{ env.CONFIGURATION }} --no-restore
@@ -32,7 +32,7 @@ jobs:
       run: dotnet test --configuration ${{ env.CONFIGURATION }} --no-build
 
     - name: Create nuget package
-      run: dotnet pack --configuration ${{ env.CONFIGURATION }}
+      run: dotnet pack --configuration ${{ env.CONFIGURATION }} --no-restore --no-build
 
   nuget-org-push:
     runs-on: ubuntu-latest
@@ -50,11 +50,14 @@ jobs:
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
         
+    - name: Restore
+      run: dotnet restore --locked-mode
+
     - name: Build
-      run: dotnet build --configuration ${{ env.CONFIGURATION }}
+      run: dotnet build --configuration ${{ env.CONFIGURATION }} --no-restore
 
     - name: Create nuget package
-      run: dotnet pack --configuration ${{ env.CONFIGURATION }}
+      run: dotnet pack --configuration ${{ env.CONFIGURATION }} --no-restore --no-build
 
     - name: Push nuget package
       run: |
