--- a/example/Arnab.CustomPrompt.Api/Arnab.CustomPrompt.Api.csproj
+++ b/example/Arnab.CustomPrompt.Api/Arnab.CustomPrompt.Api.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <PropertyGroup>
+    <IsPackable>false</IsPackable>
+  </PropertyGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\src\Arnab.CustomPrompt\Arnab.CustomPrompt.csproj" />
   </ItemGroup>
