--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       run: dotnet build --configuration ${{ env.CONFIGURATION }} --no-restore
 
     - name: Create nuget package
-      run: dotnet pack --configuration ${{ env.CONFIGURATION }} --no-restore --no-build
+      run: dotnet pack "src/Arnab.CustomPrompt/Arnab.CustomPrompt.csproj" --configuration ${{ env.CONFIGURATION }} --no-restore --no-build
 
     - name: Push nuget package
       run: |
