--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,10 +29,14 @@ jobs:
       run: dotnet restore --locked-mode
 
     - name: Build
-      run: dotnet build --configuration ${{ env.CONFIGURATION }} --no-restore
+      run: dotnet build -c ${{ env.CONFIGURATION }} --no-restore
 
     - name: Create nuget package
-      run: dotnet pack "src/Arnab.CustomPrompt/Arnab.CustomPrompt.csproj" --configuration ${{ env.CONFIGURATION }} --no-restore --no-build
+      run: | 
+        dotnet pack "src/Arnab.CustomPrompt/Arnab.CustomPrompt.csproj" \
+          -c ${{ env.CONFIGURATION }} \
+          --no-restore \
+          --no-build
 
     - name: Push nuget package
       run: |
