--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Create package
-      uses: actions/create-package
+      uses: ./.github/actions/create-package
       with:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
