--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Create package
-      uses: actions/create-package
+      uses: ./.github/actions/create-package
       with:
         dotnet-version: 9.0.x
 
